addons/kibana/virtual-service-kibana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-rule
  namespace: kibana
spec:
  hosts:
  - kibana.example.com
  gateways:
  - kibana/kibana-gateway
  # - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: kibana.kibana.svc.cluster.local
        port:
          number: 5601
